# open-exchange

./: .env  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json
services/ledger/: .env  .env.example  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  ROADMAP.md  build.rs  report-2026-02-10-063818.csv
services/ledger/.sqlx/: query-04c3c2ec6f270b62aa223b70518cd8239ca0e013ec0716f03f2fc1189e66342b.json  query-3f85a9806a06771185b2c6864fd3ad5734ce3fbd6007cfe2a492df24ea43f6d0.json  query-45527eecc14c4cf9bebfd99d78a9ce40491985fd1ddf56a82f0a16da5f25ea78.json  query-ad02af5d9d42c99b11e43c5ba8934b2f305d4042b76c20703993b9ead272c258.json  query-c1a4ec94f232da9b0d1fd62f2a1826d289c94b279f07f2c71f7f0e820e4b0825.json  query-ee16b66ddf38a8928b30d10180f9a4a5df7d2070eb4d0bfa9ca81282ee45486f.json
services/ledger/docs/: db-scaling.md
services/ledger/migrations/: 20260212000000_create_fills_table.sql
services/ledger/src/: api.rs  config.rs  container.rs  domain.rs  error.rs  infra.rs  lib.rs  main.rs  proto.rs  system.rs
services/ledger/tests/: concurrency_test.rs  conservation_of_money_test.rs  corporate_actions_test.rs  deposit_withdrawal_test.rs  error_paths_test.rs  fee_tiers_test.rs  futures_test.rs  idempotency_test.rs  infra_test_helpers.rs  integration_critical_path.rs  integration_test.rs  ledger_entries_test.rs  ledger_test_helpers.rs  liquidation_test.rs  margin_trading_test.rs  market_orders_test.rs  options_test.rs  order_service_failure_test.rs  order_service_options_test.rs  position_limits_test.rs  precision_test.rs  (+11 more)
(+2772 files in other folders)
