[package]
name = "ledger"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
warp = "0.3"
uuid = { version = "1.20.0", features = ["v4"] }
chrono = { version = "0.4.43", features = ["serde"] }

[build-dependencies]
tonic-build = "0.12"
